# esp32p4-osoyoo-lvgl-10inch

./: .gitignore  CMakeLists.txt  README.md  SETUP_COMMAND_LINE.md  TUTORIAL.md  project.info  sdkconfig.defaults  ui.c  ui.h  ui_events.c  ui_helpers.c
main/: CMakeLists.txt  idf_component.yml  main.c  osoyoo_panel.c  osoyoo_panel.h  osoyoo_panel_init.h
main/ui/: project.info  ui.c  ui.h  ui_events.h  ui_helpers.h
main/ui/screens/: ui_Screen1.c  ui_Screen1.h
